# a2a-observability

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: client.py  server.py  server_dev.py
test/: test_a2a.py
