[project]
name = "a2a-observability"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.5",
    "openai-agents>=0.0.16",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    # Observability dependencies
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "pydantic-ai[logfire]>=0.0.14",
    "langfuse>=2.56.0",
    "nest-asyncio>=1.6.0",
    "phoenix>=0.9.1",
    "openinference-instrumentation-openai>=0.1.30",
    "logfire>=3.16.1",
    "python-dotenv>=1.1.0",
    "arize-phoenix>=10.5.0",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
